# NutriFit

./: .gitignore  README.md  package-lock.json  read.txt  render.yaml
nutrifit-backend/: .dockerignore  .env.example  Dockerfile  Procfile  README.md  fly.toml  pom.xml  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt
nutrifit-backend/app/: config.py  main.py  schemas.py  version.py
nutrifit-backend/app/routers/: barcode.py  health.py  meal.py  search.py
nutrifit-backend/app/services/: meal_estimator.py  openfoodfacts.py
nutrifit-backend/src/main/java/com/nutrifit/backend/: NutriFitBackendApplication.java
nutrifit-backend/src/main/java/com/nutrifit/backend/config/: AppSettings.java  DatabaseConfig.java  GlobalExceptionHandler.java  ProfileSchemaInitializer.java  WebConfig.java
nutrifit-backend/src/main/java/com/nutrifit/backend/controller/: BarcodeController.java  DatabaseHealthController.java  HealthController.java  MealController.java  (+4 more)
nutrifit-backend/src/main/resources/: application.properties
nutrifit-backend/src/test/java/com/nutrifit/backend/: DatabaseHealthControllerTest.java  HealthControllerTest.java  MealControllerTest.java  OpenFoodFactsControllerTest.java  SpoonacularClientTest.java  SpoonacularControllerTest.java  StorageControllerDatabaseErrorTest.java  StorageControllerTest.java  TestDatabaseConfig.java  UsdaFoodDataControllerTest.java  UserProfileControllerTest.java  UserProfileNotConfiguredTest.java  ValidationTest.java
nutrifit-backend/tests/: conftest.py  test_barcode.py  test_health.py  test_meal.py  test_search.py
(+138 files in other folders)
